--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>modal project</h1>
+    <!-- hero -->
+    <!-- end of hero -->
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
