--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   </head>
   <body>
     <!-- hero -->
+    <header class="hero">
+      
+    </header>
     <!-- end of hero -->
     <!-- javascript -->
     <script src="app.js"></script>
