--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- hero -->
     <header class="hero">
-      
+      <div class="banner"></div>
     </header>
     <!-- end of hero -->
     <!-- javascript -->
