--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
   <body>
     <!-- hero -->
     <header class="hero">
-      <div class="banner"></div>
+      <div class="banner">
+
+      </div>
     </header>
     <!-- end of hero -->
     <!-- javascript -->
     <script src="app.js"></script>
-  </body>
+  </body> 
 </html>
