--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- hero -->
     <header class="hero">
       <div class="banner">
-
+        <h1>modal project</h1>
       </div>
     </header>
     <!-- end of hero -->
