--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <header class="hero">
       <div class="banner">
         <h1>modal project</h1>
-        <button class="btn modal-btn"></button>
+        <button class="btn modal-btn">
+          open modal
+        </button>
       </div>
     </header>
-    <!-- end of hero --> 
+    <!-- end of hero -->
     <!-- javascript -->
     <script src="app.js"></script>
   </body> 
