--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       </div>
     </header>
     <!-- end of hero -->
+    <!-- modal -->
+    
     <!-- javascript -->
     <script src="app.js"></script>
   </body> 
