--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <!-- end of hero -->
     <!-- modal -->
-    
+    <div class="modal-overlay"></div>
     <!-- javascript -->
     <script src="app.js"></script>
   </body> 
