--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
     </header>
     <!-- end of hero -->
     <!-- modal -->
-    <div class="modal-overlay"></div>
+    <div class="modal-overlay">
+      <div class="modal-container">
+        
+      </div>
+    </div>
     <!-- javascript -->
     <script src="app.js"></script>
   </body> 
