--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- modal -->
     <div class="modal-overlay">
       <div class="modal-container">
-        
+        <h3>modal content</h3>
       </div>
     </div>
     <!-- javascript -->
