--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div class="modal-overlay">
       <div class="modal-container">
         <h3>modal content</h3>
+        <button class="close-btn"></button>
       </div>
     </div>
     <!-- javascript -->
