--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="hero">
       <div class="banner">
         <h1>modal project</h1>
-        <button class="btn"></button>
+        <button class="btn modal-btn"></button>
       </div>
     </header>
     <!-- end of hero -->
